# dotfiles

./: .gitignore  .gitmodules  Dockerfile  Xmodmap  alias  bashrc  circle-parallel.sh  circle.yml  emacs  emacs.env  emacs.old  emacs.service  emacs~  gitconfig  install.conf.yaml  install.sh  installCabalPackages.sh  installCask.sh  installGoPackages.sh  installStackPackages.sh  installTPM.sh  readme.org  shellrc  stack.yaml  stylish-haskell.yaml  testDockerfile  testList  tmux.conf  vimrc  zshrc
docker/: Dockerfile
emacs.d/: #viper.el#  Cask  abbrev_defs  cask-additions  emacs.desktop  install.el  install.sh  packages.el  tramp  vimpulse.el
emacs.d.old/: bookmarks  tramp
emacs.d.old/auto-save-list/: .saves-1399-Familiar.corp.imvu.com~  .saves-2120-PHX-L02456~  .saves-2512-Familiar.corp.imvu.com~  .saves-2577-Familiar.corp.imvu.com~  .saves-2656-PHX-L02456~  .saves-2734-Familiar.gateway.sonic.net~  .saves-2837-Familiar.corp.imvu.com~  .saves-3052-PHX-L02456~  .saves-3118-Familiar.corp.imvu.com~  .saves-3736-amccullough-M4700.corp.imvu.com~  .saves-528-PHX-L02456~  (+22 more)
eshell/: clear.el  prompt.el
fish/: before.init.fish  bundle  config.fish  fishfile  init.fish
omf/: .#config.fish  before.init.fish  bundle  init.fish  theme
puppet/: Dockerfile  bumblebee.pp  host.pp
screenlayout/: present.sh  work.sh
test/: testDocker.sh  test_dev_env.sh  test_emacs.sh  test_puppet.sh  test_xmonad.sh
vim_local/: vimrc
windows/: install.bat
xmonad/: Dockerfile  LICENSE  stack.yaml  xmonad-config.cabal  xmonad.hs  xmonad.hs.emacs  xmonad.hs.new  xmonad.hs.stock  xmonad.hs~
(+541 files in other folders)
